25th exercise Numpy

--- a/NUMPY EXERCISES.ipynb
+++ b/NUMPY EXERCISES.ipynb
@@ -1,6 +1,648 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.14.3'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#1. Import numpy as np and see the version\n",
+    "import numpy as np\n",
+    "np.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3, 4, 5, 6, 7, 8])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 2. How to create a 1D array?\n",
+    "\n",
+    "np.arange(9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ True,  True,  True],\n",
+       "       [ True,  True,  True],\n",
+       "       [ True,  True,  True]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#3. How to create a boolean array?\n",
+    "\n",
+    "np.ones((3,3), dtype=bool)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 3, 5, 7, 9])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#4. How to extract items that satisfy a given condition from 1D array?\n",
+    "\n",
+    "arr = np.array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])\n",
+    "arr[arr%2!=0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0, -1,  2, -1,  4, -1,  6, -1,  8, -1])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#5. How to replace items that satisfy a condition with another value in numpy array?\n",
+    "\n",
+    "arr = np.array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])\n",
+    "arr[arr%2!=0]=-1\n",
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0, -1,  2, -1,  4, -1,  6, -1,  8, -1])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#6. How to replace items that satisfy a condition without affecting the original array?\n",
+    "\n",
+    "arr = np.array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])\n",
+    "out = np.where(arr%2!=0,-1, arr)\n",
+    "\n",
+    "display(out)\n",
+    "display(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 2, 3, 4],\n",
+       "       [5, 6, 7, 8, 9]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#7. How to reshape an array?\n",
+    "arr = np.arange(10)\n",
+    "arr.reshape(2,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 2, 3, 4],\n",
+       "       [5, 6, 7, 8, 9],\n",
+       "       [1, 1, 1, 1, 1],\n",
+       "       [1, 1, 1, 1, 1]])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#8. How to stack two arrays vertically?\n",
+    "\n",
+    "a = np.arange(10).reshape(2,-1)\n",
+    "b = np.repeat(1, 10).reshape(2,-1)\n",
+    "\n",
+    "np.concatenate([a,b], axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 2, 3, 4, 1, 1, 1, 1, 1],\n",
+       "       [5, 6, 7, 8, 9, 1, 1, 1, 1, 1]])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#9. How to stack two arrays horizontally?\n",
+    "\n",
+    "a = np.arange(10).reshape(2,-1)\n",
+    "b = np.repeat(1, 10).reshape(2,-1)\n",
+    "\n",
+    "np.concatenate([a,b], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1, 1, 2, 2, 2, 3, 3, 3, 1, 2, 3, 1, 2, 3, 1, 2, 3])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#10. How to generate custom sequences in numpy without hardcoding?\n",
+    "a = np.array([1,2,3])\n",
+    "np.r_[np.repeat(a,3), np.tile(a,3)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 4])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#11. How to get the common items between two python numpy arrays?\n",
+    "a = np.array([1,2,3,2,3,4,3,4,5,6])\n",
+    "b = np.array([7,2,10,2,7,4,9,4,9,8])\n",
+    "np.intersect1d(a,b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#12. How to remove from one array those items that exist in another?\n",
+    "a = np.array([1,2,3,4,5])\n",
+    "b = np.array([5,6,7,8,9])\n",
+    "np.setdiff1d(a,b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([1, 3, 5, 7], dtype=int64),)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#13. How to get the positions where elements of two arrays match?\n",
+    "a = np.array([1,2,3,2,3,4,3,4,5,6])\n",
+    "b = np.array([7,2,10,2,7,4,9,4,9,8])\n",
+    "np.where(a == b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([1, 3, 4], dtype=int64),)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#14. How to extract all numbers between a given range from a numpy array?\n",
+    "a = np.array([2, 6, 1, 9, 10, 3, 27])\n",
+    "np.where((a>=5) & (a<=10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([6., 7., 9., 8., 9., 7., 5.])"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 15. How to make a python function that handles scalars to work on numpy arrays?\n",
+    "def maxx(x, y):\n",
+    "    \"\"\"Get the maximum of two items\"\"\"\n",
+    "    if x >= y:\n",
+    "        return x\n",
+    "    else:\n",
+    "        return y\n",
+    "    \n",
+    "pair_max = np.vectorize(maxx, otypes=[float])\n",
+    "\n",
+    "a = np.array([5, 7, 9, 8, 6, 4, 5])\n",
+    "b = np.array([6, 3, 4, 8, 9, 7, 1])\n",
+    "\n",
+    "pair_max(a, b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 2],\n",
+       "       [6, 7, 8],\n",
+       "       [3, 4, 5]])"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#16. How to swap two columns in a 2d numpy array?\n",
+    "arr = np.arange(9).reshape(3,3)\n",
+    "arr[[1,2]] = arr[[2,1]]\n",
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 2, 1],\n",
+       "       [3, 5, 4],\n",
+       "       [6, 8, 7]])"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#17. How to swap two rows in a 2d numpy array?\n",
+    "arr = np.arange(9).reshape(3,3)\n",
+    "arr[:,[1,2]] = arr[:,[2,1]]\n",
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[6, 7, 8],\n",
+       "       [3, 4, 5],\n",
+       "       [0, 1, 2]])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#18. How to reverse the rows of a 2D array?\n",
+    "arr = np.arange(9).reshape(3,3)\n",
+    "arr[::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2, 1, 0],\n",
+       "       [5, 4, 3],\n",
+       "       [8, 7, 6]])"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#19. How to reverse the columns of a 2D array?\n",
+    "arr = np.arange(9).reshape(3,3)\n",
+    "arr[:,::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[5.7326767 , 9.45634803, 9.29903243],\n",
+       "       [8.48924923, 9.50461014, 6.17865309],\n",
+       "       [5.27289739, 8.89216528, 5.43294324],\n",
+       "       [7.00952465, 7.86953546, 7.36869249],\n",
+       "       [7.74489076, 5.45232577, 5.26911625]])"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#20. How to create a 2D array containing random floats between 5 and 10?\n",
+    "np.random.uniform(5,10, size=(5,3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.629, 0.394, 0.59 ],\n",
+       "       [0.162, 0.477, 0.633],\n",
+       "       [0.714, 0.818, 0.505],\n",
+       "       [0.608, 0.654, 0.615],\n",
+       "       [0.47 , 0.506, 0.857]])"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#21. How to print only 3 decimal places in python numpy array?\n",
+    "rand_arr = np.random.random((5,3))\n",
+    "np.set_printoptions(precision=3)\n",
+    "rand_arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[5.434e-04, 2.784e-04, 4.245e-04],\n",
+       "       [8.448e-04, 4.719e-06, 1.216e-04],\n",
+       "       [6.707e-04, 8.259e-04, 1.367e-04]])"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#22 How to pretty print a numpy array by suppressing the scientific notation (like 1e10)?\n",
+    "np.set_printoptions(suppress=False)\n",
+    "\n",
+    "np.random.seed(100)\n",
+    "rand_arr = np.random.random([3,3])/1e3\n",
+    "rand_arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  1,  2, ..., 12, 13, 14])"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#23. How to limit the number of items printed in output of numpy array?\n",
+    "\n",
+    "np.set_printoptions(threshold=6)\n",
+    "a = np.arange(15)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14])"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#24. How to print the full numpy array without truncating\n",
+    "np.set_printoptions(threshold=6)\n",
+    "a = np.arange(15)\n",
+    "np.set_printoptions(threshold=np.nan)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[b'5.1', b'3.5', b'1.4', b'0.2', b'Iris-setosa'],\n",
+       "       [b'4.9', b'3.0', b'1.4', b'0.2', b'Iris-setosa'],\n",
+       "       [b'4.7', b'3.2', b'1.3', b'0.2', b'Iris-setosa']], dtype=object)"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#25. How to import a dataset with numbers and texts keeping the text intact in python numpy?\n",
+    "url = 'https://archive.ics.uci.edu/ml/machine-learning-databases/iris/iris.data'\n",
+    "iris = np.genfromtxt(url, delimiter=',', dtype='object')\n",
+    "\n",
+    "iris[:3]"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 2
 }
